html checker corrected errors

--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
                 <iframe class="video" title="youtube-video" src="https://www.youtube.com/embed/ZlfIVEy_YOA"></iframe>
             </div>
             <div class="figcapt">
-                <figcaption class="video-caption">
+                <div class="video-caption">
                     <span>Stanford Professor Andrei Linde celebrates physics breakthrough</span>
                     <br>
                     <span>Video by StanfordUniversity</span>
-                </figcaption>
+                </div>
             </div>
             <div class="story-box">
                 <p class="story">Confused, Dr. Linde called out to his wife, asking if she had ordered anything.</p>
@@ -160,11 +160,11 @@
                 <img src="images/18cosmos-2-jumbo.jpg" alt="Big telescope image">
             </div>
             <div class="image-capt">
-                <figcaption class="for-image">
+                <div class="for-image">
                     <span class="cap1">The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.</span>
                     <br>
                     <span class="cap2">Steffen Richter/Associated Press</span>
-                </figcaption>
+                </div>
             </div>
             <div class="story-box">
                 <p class="story">In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.</p>
@@ -195,14 +195,16 @@
                     <button class="read-btn">READ 615 COMMENTS</button>
                 </div>
                 <div class="icons-below">
-                    <li class="icons-below-box">
+                    <ul>
+                        <li class="icons-below-box"></li> 
+                    </ul>
                         <ul class="list_icon_below_box">
                             <li class="bcd"><a href="#"><img src="images/fbk.png" alt="fb-icon"></a></li>
                             <li class="bcd"><a href="#"><img src="images/ttr.png" alt="twitter-icon"></a></li>
                             <li class="bcd"><a href="#"><img src="images/envelope.png" alt="envelope"></a></li>
                             <li class="bcd"><a href="#"><img src="images/share.png" alt="envelope"></a></li>
                         </ul>
-                    </li>    
+                       
                 </div>
             </div>
         </section>
@@ -213,68 +215,67 @@
                     <h3>More in Space & Cosmos</h3>
                     <div class="fig-cont">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/spacesuits.jpg" alt="Space Suits">
-                                <figcaption>Ting shen for The New York Times</figcaption>
-                                <span class="fig-desc">NASA's New Spacesuits Unvieled, for Trips to the Moon and Beyond</span>
-                                <br>
+                                <p>Ting shen for The New York Times</p>
+                                <p class="fig-desc">NASA's New Spacesuits Unvieled, for Trips to the Moon and Beyond</p>
                                 <span class="fig-date">11h ago</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/shared_mission.jpg" alt="Space Suits">
-                                <figcaption>Alex Gallardo/Associated Press</figcaption>
+                                <p>Alex Gallardo/Associated Press</p>
                                 <span class="fig-desc">After Sparring, NASA and SpaceX Declare a Shared Mission</span>
                                 <br>
                                 <span class="fig-date">Yesterday</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                     <div class="fig-cont third">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/climate_change.jpg" alt="Space Suits">
-                                <figcaption>PAID POST: Global Covenant of Mayors</figcaption>
+                                <p>PAID POST: Global Covenant of Mayors</p>
                                 <span class="fig-desc">Mayors and Ministers Form a Superalliance for Climate Action global covenant</span>
                                 <br>
                                 <span class="fig-date">Oct 19</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/female_spacewalk.jpg" alt="Space Suits">
-                                <figcaption>NASA via Associated press</figcaption>
+                                <p>NASA via Associated press</p>
                                 <span class="fig-desc">First All Female Spacewalk is Back On, NASA Says</span>
                                 <br>
                                 <span class="fig-date">Oct 5</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/path_to_space.jpg" alt="Space Suits">
-                                <figcaption>Allison Farrand for The New York Times</figcaption>
+                                <p>Allison Farrand for The New York Times</p>
                                 <span class="fig-desc">An Astronaut Who Built Path to Space for Other Women</span>
                                 <br>
                                 <span class="fig-date">Oct 2</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                     <div class="fig-cont third">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/comet.jpg" alt="Space Suits">
-                                <figcaption>Travis Rector/Gemini Observatory/NSF/AURA</figcaption>
+                                <p>Travis Rector/Gemini Observatory/NSF/AURA</p>
                                 <span class="fig-desc">An Interstellar Comet, in time for the Holidays</span>
                                 <br>
                                 <span class="fig-date">Oct 1</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -283,35 +284,35 @@
                     <h3>Editors' Pick</h3>
                     <div class="fig-cont">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/teen_stars.jpg" alt="Space Suits">
-                                <figcaption>Alexis Gross for The New York Times</figcaption>
+                                <p>Alexis Gross for The New York Times</p>
                                 <span class="fig-desc">The Future Teen Stars of America Live on TikTok</span>
                                 <br>
                                 <span class="fig-date">Oct 1</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/indian_house.jpg" alt="Space Suits">
-                                <figcaption>Tobias Alexander Harvey</figcaption>
+                                <p>Tobias Alexander Harvey</p>
                                 <span class="fig-desc">This Is an Indian House, According to One Architect</span>
                                 <br>
                                 <span class="fig-date">Oct 9</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                     <div class="fig-cont third">
                         <a href="#">
-                            <figure class="sect-two-fig">
+                            <div class="sect-two-fig">
                                 <img src="images/smell_top.png" alt="Space Suits">
-                                <figcaption>Hilary Swift for The New York Times</figcaption>
+                                <p>Hilary Swift for The New York Times</p>
                                 <span class="fig-desc">That Smell at the Top of One World Trade? It’s on Purpose</span>
                                 <br>
                                 <span class="fig-date">Aug 7</span>
-                            </figure>
+                            </div>
                         </a>
                     </div>
                 </div>
@@ -373,7 +374,7 @@
                 </div>
             </aside>
         </section>
-        <section class="section-3">
+        <div class="section-3">
             <div class="bottom-header">
                 <div class="bottom-logo">
                     <img src="images/tnypic.png" alt="NYT-logo">
@@ -474,7 +475,7 @@
                         <li class="small"><a href="#">Email Newsletters</a></li>
                         <li class="small"><a href="#">Corporate Subscriptions</a></li>
                         <li class="small"><a href="#">Education Rate</a></li>
-                        <div class="small-div"></div>
+                        <li class="small-div"></li>
                         <li class="small acd"><a href="#">Mobile Applications</a></li>
                         <li class="small"><a href="#">Replica Edition</a></li>
                         <li class="small"><a href="#">Espanol</a></li>
@@ -482,7 +483,7 @@
                     </ul>
                 </section>
             </div>
-        </section>
+        </div>
     </main>
     <footer class="footer-container">
         <ul class="footer-list">
