done with the page, updated the readme

--- a/index.html
+++ b/index.html
@@ -218,7 +218,8 @@
                             <div class="sect-two-fig">
                                 <img src="images/spacesuits.jpg" alt="Space Suits">
                                 <p>Ting shen for The New York Times</p>
-                                <p class="fig-desc">NASA's New Spacesuits Unvieled, for Trips to the Moon and Beyond</p>
+                                <span class="fig-desc">NASA's New Spacesuits Unvieled, for Trips to the Moon and Beyond</span>
+                                <br>
                                 <span class="fig-date">11h ago</span>
                             </div>
                         </a>
@@ -503,14 +504,12 @@
     </footer>
     <nav class="bottom-nav">
         <div class="inner-tush">
-            <div class="inner-el">
-                <div class="pa">
-                    <p>Access more of The Times by creating a free account or logging in.</p>
-                </div>
-                <div class="exp">
-                    <span>Expand</span>
-                    <img src="images/up_arrow.svg" alt="UP">
-                </div>
+            <div class="pa">
+                <p>Access more of The Times by creating a free account or logging in.</p>
+            </div>
+            <div class="exp">
+                <span>Expand</span>
+                <img src="images/up_arrow.svg" alt="UP">
             </div>
         </div>
     </nav>
