--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
                         <img src="images/magnifying-glass.png" alt="search-icon">
                     </div>
                 </div>
-                <div class="SC abs"><span>SPACE & COSMOS</span></div>
+                <div class="SC abs">
+                    <a href="https://www.nytimes.com/section/science/space">
+                        <span>SPACE & COSMOS</span>
+                    </a>
+                </div>
                 <div class="nyc-logo abs">
                     <a href="#" class="nyc-anc-tag">
                         <img src="images/tnypic.png" alt="NYC-logo">
@@ -134,11 +138,11 @@
                 <iframe class="video" title="youtube-video" src="https://www.youtube.com/embed/ZlfIVEy_YOA"></iframe>
             </div>
             <div class="figcapt">
-                <div class="video-caption">
+                <figcaption class="video-caption">
                     <span>Stanford Professor Andrei Linde celebrates physics breakthrough</span>
                     <br>
                     <span>Video by StanfordUniversity</span>
-                </div>
+                </figcaption>
             </div>
             <div class="story-box">
                 <p class="story">Confused, Dr. Linde called out to his wife, asking if she had ordered anything.</p>
@@ -160,11 +164,11 @@
                 <img src="images/18cosmos-2-jumbo.jpg" alt="Big telescope image">
             </div>
             <div class="image-capt">
-                <div class="for-image">
+                <figcaption class="for-image">
                     <span class="cap1">The Bicep2 telescope, in the foreground, was used to detect the faint spiraling gravity patterns — the signature of a universe being wrenched violently apart at its birth.</span>
                     <br>
                     <span class="cap2">Steffen Richter/Associated Press</span>
-                </div>
+                </figcaption>
             </div>
             <div class="story-box">
                 <p class="story">In 2002, he was part of a team that discovered that the microwave radiation was polarized, meaning the light waves had a slight preference to vibrate in one direction rather than another.</p>
@@ -195,16 +199,14 @@
                     <button class="read-btn">READ 615 COMMENTS</button>
                 </div>
                 <div class="icons-below">
-                    <ul>
-                        <li class="icons-below-box"></li> 
-                    </ul>
+                    <li class="icons-below-box">
                         <ul class="list_icon_below_box">
                             <li class="bcd"><a href="#"><img src="images/fbk.png" alt="fb-icon"></a></li>
                             <li class="bcd"><a href="#"><img src="images/ttr.png" alt="twitter-icon"></a></li>
                             <li class="bcd"><a href="#"><img src="images/envelope.png" alt="envelope"></a></li>
                             <li class="bcd"><a href="#"><img src="images/share.png" alt="envelope"></a></li>
                         </ul>
-                       
+                    </li>    
                 </div>
             </div>
         </section>
@@ -215,68 +217,68 @@
                     <h3>More in Space & Cosmos</h3>
                     <div class="fig-cont">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/spacesuits.jpg" alt="Space Suits">
-                                <p>Ting shen for The New York Times</p>
+                                <figcaption>Ting shen for The New York Times</figcaption>
                                 <span class="fig-desc">NASA's New Spacesuits Unvieled, for Trips to the Moon and Beyond</span>
                                 <br>
                                 <span class="fig-date">11h ago</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/shared_mission.jpg" alt="Space Suits">
-                                <p>Alex Gallardo/Associated Press</p>
+                                <figcaption>Alex Gallardo/Associated Press</figcaption>
                                 <span class="fig-desc">After Sparring, NASA and SpaceX Declare a Shared Mission</span>
                                 <br>
                                 <span class="fig-date">Yesterday</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                     <div class="fig-cont third">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/climate_change.jpg" alt="Space Suits">
-                                <p>PAID POST: Global Covenant of Mayors</p>
+                                <figcaption>PAID POST: Global Covenant of Mayors</figcaption>
                                 <span class="fig-desc">Mayors and Ministers Form a Superalliance for Climate Action global covenant</span>
                                 <br>
                                 <span class="fig-date">Oct 19</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/female_spacewalk.jpg" alt="Space Suits">
-                                <p>NASA via Associated press</p>
+                                <figcaption>NASA via Associated press</figcaption>
                                 <span class="fig-desc">First All Female Spacewalk is Back On, NASA Says</span>
                                 <br>
                                 <span class="fig-date">Oct 5</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/path_to_space.jpg" alt="Space Suits">
-                                <p>Allison Farrand for The New York Times</p>
+                                <figcaption>Allison Farrand for The New York Times</figcaption>
                                 <span class="fig-desc">An Astronaut Who Built Path to Space for Other Women</span>
                                 <br>
                                 <span class="fig-date">Oct 2</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                     <div class="fig-cont third">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/comet.jpg" alt="Space Suits">
-                                <p>Travis Rector/Gemini Observatory/NSF/AURA</p>
+                                <figcaption>Travis Rector/Gemini Observatory/NSF/AURA</figcaption>
                                 <span class="fig-desc">An Interstellar Comet, in time for the Holidays</span>
                                 <br>
                                 <span class="fig-date">Oct 1</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                 </div>
@@ -285,35 +287,35 @@
                     <h3>Editors' Pick</h3>
                     <div class="fig-cont">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/teen_stars.jpg" alt="Space Suits">
-                                <p>Alexis Gross for The New York Times</p>
+                                <figcaption>Alexis Gross for The New York Times</figcaption>
                                 <span class="fig-desc">The Future Teen Stars of America Live on TikTok</span>
                                 <br>
                                 <span class="fig-date">Oct 1</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                     <div class="fig-cont">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/indian_house.jpg" alt="Space Suits">
-                                <p>Tobias Alexander Harvey</p>
+                                <figcaption>Tobias Alexander Harvey</figcaption>
                                 <span class="fig-desc">This Is an Indian House, According to One Architect</span>
                                 <br>
                                 <span class="fig-date">Oct 9</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                     <div class="fig-cont third">
                         <a href="#">
-                            <div class="sect-two-fig">
+                            <figure class="sect-two-fig">
                                 <img src="images/smell_top.png" alt="Space Suits">
-                                <p>Hilary Swift for The New York Times</p>
+                                <figcaption>Hilary Swift for The New York Times</figcaption>
                                 <span class="fig-desc">That Smell at the Top of One World Trade? It’s on Purpose</span>
                                 <br>
                                 <span class="fig-date">Aug 7</span>
-                            </div>
+                            </figure>
                         </a>
                     </div>
                 </div>
@@ -375,7 +377,7 @@
                 </div>
             </aside>
         </section>
-        <div class="section-3">
+        <section class="section-3">
             <div class="bottom-header">
                 <div class="bottom-logo">
                     <img src="images/tnypic.png" alt="NYT-logo">
@@ -476,7 +478,7 @@
                         <li class="small"><a href="#">Email Newsletters</a></li>
                         <li class="small"><a href="#">Corporate Subscriptions</a></li>
                         <li class="small"><a href="#">Education Rate</a></li>
-                        <li class="small-div"></li>
+                        <div class="small-div"></div>
                         <li class="small acd"><a href="#">Mobile Applications</a></li>
                         <li class="small"><a href="#">Replica Edition</a></li>
                         <li class="small"><a href="#">Espanol</a></li>
@@ -484,7 +486,7 @@
                     </ul>
                 </section>
             </div>
-        </div>
+        </section>
     </main>
     <footer class="footer-container">
         <ul class="footer-list">
@@ -504,12 +506,14 @@
     </footer>
     <nav class="bottom-nav">
         <div class="inner-tush">
-            <div class="pa">
-                <p>Access more of The Times by creating a free account or logging in.</p>
-            </div>
-            <div class="exp">
-                <span>Expand</span>
-                <img src="images/up_arrow.svg" alt="UP">
+            <div class="inner-el">
+                <div class="pa">
+                    <p>Access more of The Times by creating a free account or logging in.</p>
+                </div>
+                <div class="exp">
+                    <p>Expand</p>
+                    <img src="images/up_arrow.svg" alt="UP">
+                </div>
             </div>
         </div>
     </nav>
