--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/spacesuits.jpg" alt="Space Suits">
-                                <figcaption>Ting shen for The New York Times</figcaption>
+                                <p>Ting shen for The New York Times</p>
                                 <span class="fig-desc">NASA's New Spacesuits Unvieled, for Trips to the Moon and Beyond</span>
                                 <br>
                                 <span class="fig-date">11h ago</span>
@@ -230,7 +230,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/shared_mission.jpg" alt="Space Suits">
-                                <figcaption>Alex Gallardo/Associated Press</figcaption>
+                                <p>Alex Gallardo/Associated Press</p>
                                 <span class="fig-desc">After Sparring, NASA and SpaceX Declare a Shared Mission</span>
                                 <br>
                                 <span class="fig-date">Yesterday</span>
@@ -241,7 +241,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/climate_change.jpg" alt="Space Suits">
-                                <figcaption>PAID POST: Global Covenant of Mayors</figcaption>
+                                <p>PAID POST: Global Covenant of Mayors</p>
                                 <span class="fig-desc">Mayors and Ministers Form a Superalliance for Climate Action global covenant</span>
                                 <br>
                                 <span class="fig-date">Oct 19</span>
@@ -252,7 +252,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/female_spacewalk.jpg" alt="Space Suits">
-                                <figcaption>NASA via Associated press</figcaption>
+                                <p>NASA via Associated press</p>
                                 <span class="fig-desc">First All Female Spacewalk is Back On, NASA Says</span>
                                 <br>
                                 <span class="fig-date">Oct 5</span>
@@ -263,7 +263,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/path_to_space.jpg" alt="Space Suits">
-                                <figcaption>Allison Farrand for The New York Times</figcaption>
+                                <p>Allison Farrand for The New York Times</p>
                                 <span class="fig-desc">An Astronaut Who Built Path to Space for Other Women</span>
                                 <br>
                                 <span class="fig-date">Oct 2</span>
@@ -274,7 +274,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/comet.jpg" alt="Space Suits">
-                                <figcaption>Travis Rector/Gemini Observatory/NSF/AURA</figcaption>
+                                <p>Travis Rector/Gemini Observatory/NSF/AURA</p>
                                 <span class="fig-desc">An Interstellar Comet, in time for the Holidays</span>
                                 <br>
                                 <span class="fig-date">Oct 1</span>
@@ -289,7 +289,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/teen_stars.jpg" alt="Space Suits">
-                                <figcaption>Alexis Gross for The New York Times</figcaption>
+                                <p>Alexis Gross for The New York Times</p>
                                 <span class="fig-desc">The Future Teen Stars of America Live on TikTok</span>
                                 <br>
                                 <span class="fig-date">Oct 1</span>
@@ -300,7 +300,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/indian_house.jpg" alt="Space Suits">
-                                <figcaption>Tobias Alexander Harvey</figcaption>
+                                <p>Tobias Alexander Harvey</p>
                                 <span class="fig-desc">This Is an Indian House, According to One Architect</span>
                                 <br>
                                 <span class="fig-date">Oct 9</span>
@@ -311,7 +311,7 @@
                         <a href="#">
                             <figure class="sect-two-fig">
                                 <img src="images/smell_top.png" alt="Space Suits">
-                                <figcaption>Hilary Swift for The New York Times</figcaption>
+                                <p>Hilary Swift for The New York Times</p>
                                 <span class="fig-desc">That Smell at the Top of One World Trade? It’s on Purpose</span>
                                 <br>
                                 <span class="fig-date">Aug 7</span>
